# sencd

./: .clang-format  .gitattributes  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: client.c.0865D106339A6530.idx  core.c.74FB8C2EC6393A85.idx  core.c.D8027DAD51AED640.idx  core.h.01D2D1B9B8310833.idx  core.h.19132AEA85789263.idx  logs.c.1A9D33284DBB99E0.idx  logs.h.21653E10C1EDE4F8.idx  logs.h.E549BF3A2BD3BF0F.idx  server.c.7B04A13732BA513E.idx
core/: client.c  server.c
main/: client.c  server.c
src/client/: client_core.c  client_core.h  core.c  core.h
src/commands/: client_env.c  client_env.h  server_env.c  server_env.h
src/commands/utility/: clear.c  clear.h
src/debug/: logs.c  logs.h
src/linker/: session.h  session_manager.h
src/server/: server_core.c  server_core.h
src/server/serverinit/: idle.c  idle.h
src/sessions/: session.c  session.h  session_manager.c  session_manager.h
src/sessions/utility/: authentication.h
src/shared/: packet.c  packet.h
src/shared/security/: encryption.c  encryption.h
